--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 # واجهة المستخدم
-streamlit==1.32.2
-rich==14.2.0
-altair==5.5.0
+streamlit
+rich
+altair
 
 # التعلم العميق
-tensorflow-cpu==2.20.0
+tensorflow-cpu
 
 # علم البيانات والمعالجة
-numpy==1.26.4
-Pillow==10.4.0
+numpy
+Pillow
+
